tests/ui/intrinsics/incorrect-transmute.stderr
error[E0658]: intrinsics are subject to change
  --> $DIR/incorrect-transmute.rs:5:8
   |
LL | extern "rust-intrinsic" fn transmute() {}
   |        ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0094]: intrinsic has wrong number of type parameters: found 0, expected 2
  --> $DIR/incorrect-transmute.rs:5:37
   |
LL | extern "rust-intrinsic" fn transmute() {}
   |                                     ^ expected 2 type parameters

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/incorrect-transmute.rs:5:40
   |
LL | extern "rust-intrinsic" fn transmute() {}
   |                                        ^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0094, E0658.
For more information about an error, try `rustc --explain E0094`.
